--- a/img.html
+++ b/img.html
@@ -11,13 +11,13 @@
 <body onload="reload()">
    <div class="row">
      <div class="column">
-       <img id="photo" src="/Users/k4vglitcher/Desktop/photo-sharp/outputs/testing1.jpg" width="600" height="500" alt="Loading..." style="float:left"/>
+       <img id="photo" src="./outputs/testing1.jpg" width="600" height="500" alt="Loading..." style="float:left"/>
      </div>
      <div class="column">
-       <img id="photo#" src="/Users/k4vglitcher/Desktop/photo-sharp/outputs/testing.jpg" width="600" height="500" alt="Loading..." style="float:right" />
+       <img id="photo#" src="./outputs/testing.jpg" width="600" height="500" alt="Loading..." style="float:right" />
      </div>
      <div class ="bottom">
-       <div class="original" style="font-size:50px;float:left;">Original Image</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       <div class="original" style="font-size:50px;float:left;">Original Image</div>
        <div class="modified" style="font-size:50px;float:right;">Modified Image</div>
      </div>
    </div>
